[package]
name = "remote-controller-rs"
version = "0.1.0"
authors = ["Hojjat <Hojjat.Abdollahi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aws-iot-device-sdk-rust = {git="https://github.com/arnstein/aws-iot-device-sdk-rust.git"}
rumqttc = "0.5.0"
eframe ="0.12"
lazy_static = "1.4.0"
serde_json = "1"
serde = "1"
serde_derive = "1"